Changed Author to Isset
Signed-off-by: Jeroen v.d. Gulik <jeroen@isset.nl>

--- a/languages/isset-video-publisher-en.po
+++ b/languages/isset-video-publisher-en.po
@@ -81,11 +81,11 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Video intergration from the video publisher from Isset Internet Professionals"
+"Video integration from the video publisher from Isset Internet Professionals"
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Casper Houde"
+msgid "Isset Internet Professionals"
 msgstr ""
 
 #: inc/class.isset-video-publisher.php:329
