--- a/languages/isset-video-publisher.pot
+++ b/languages/isset-video-publisher.pot
@@ -15,7 +15,7 @@ msgstr ""
 
 #: inc/class.admin-page.php:56 inc/class.admin-page.php:57
 #: inc/class.admin-page.php:96
-msgid "Video Publisher Settings"
+msgid "isset.video settings"
 msgstr ""
 
 #: inc/class.admin-page.php:144
