--- a/plugin/languages/isset-video-publisher-en.po
+++ b/plugin/languages/isset-video-publisher-en.po
@@ -81,11 +81,11 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Video integration from the video publisher from Isset Internet Professionals"
+"Video integration from the video publisher from isset.video"
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Isset Internet Professionals"
+msgid "isset.video"
 msgstr ""
 
 #: inc/class.isset-video-publisher.php:329
