--- a/plugin/languages/isset-video-publisher-nl_NL.po
+++ b/plugin/languages/isset-video-publisher-nl_NL.po
@@ -82,13 +82,13 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Video integration from the video publisher from Isset Internet Professionals"
+"Video integration from the video publisher from isset.video"
 msgstr ""
 "Video integratie, gemaakt voor de video publisher gemaakt door Isset "
 "Internet Professionals"
 
 #. Author of the plugin/theme
-msgid "Isset Internet Professionals"
+msgid "isset.video"
 msgstr ""
 
 #: inc/class.isset-video-publisher.php:329
