--- a/languages/isset-video-publisher-php.pot
+++ b/languages/isset-video-publisher-php.pot
@@ -1,16 +1,18 @@
+# Copyright (C) 2020 isset.video
+# This file is distributed under the same license as the isset.video plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: isset.video 0.5.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-11-02T14:03:07+00:00\n"
-"PO-Revision-Date: 2020-11-02 15:54+0100\n"
-"Language: en\n"
-"X-Generator: Poedit 2.4.1\n"
+"POT-Creation-Date: 2020-11-03T12:18:23+00:00\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"X-Generator: WP-CLI 2.4.0\n"
+"X-Domain: isset-video-publisher\n"
 
 #. Plugin Name of the plugin
 #. Author of the plugin
