--- a/plugin/languages/isset-video-publisher-nl_NL.po
+++ b/plugin/languages/isset-video-publisher-nl_NL.po
@@ -1,117 +1,187 @@
-#: inc/class.admin-page.php:56 inc/class.admin-page.php:57
-#: inc/class.admin-page.php:96
-msgid "isset.video settings"
+msgid ""
+msgstr ""
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2020-11-03T11:55:05+00:00\n"
+"PO-Revision-Date: 2020-11-03 13:02+0100\n"
+"Language: nl_NL\n"
+"X-Generator: Poedit 2.4.1\n"
+
+#. Plugin Name of the plugin
+#. Author of the plugin
+msgid "isset.video"
+msgstr "isset.video"
+
+#. Plugin URI of the plugin
+msgid "https://isset.video/wp-plugin/"
+msgstr ""
+
+#. Description of the plugin
+#, fuzzy
+msgid "Wordpress isset.video implementation"
 msgstr "Video publisher instellingen"
 
-#: inc/class.admin-page.php:144
+#. Author URI of the plugin
+msgid "http://isset.nl/"
+msgstr ""
+
+#: src/Action/Settings/Init.php:52
+#: src/Action/Settings/Menu.php:17
+#: src/Action/Settings/Menu.php:18
+msgid "isset.video settings"
+msgstr "isset.video instellingen"
+
+#: src/Action/Settings/Init.php:54
+#: src/Action/Settings/Init.php:77
 msgid "Enter your settings below:"
 msgstr "Voer hieronder je instellingen van de publisher in"
 
-#: inc/class.isset-video-publisher-meta-box.php:26
-msgid "Publisher preview"
-msgstr "Preview"
+#: src/Action/Settings/Init.php:61
+msgid "Show advanced options"
+msgstr "Laat geavanceerde opties zien"
 
-#: inc/class.isset-video-publisher-meta-box.php:27
-msgid "Front page video"
-msgstr ""
+#: src/Action/Settings/Init.php:75
+msgid "Advanced settings"
+msgstr "Geavanceerde opties"
 
-#: inc/class.isset-video-publisher-meta-box.php:35
-msgid "Use this shortcode in a post to include the video."
-msgstr "Je kan deze shortcode in een bericht gebruiken om de video te tonen."
+#: views/admin/dashboard/api-dashboard.php:7
+#: views/admin/dashboard/dashboard.php:6
+msgid "Storage used"
+msgstr "Opslag in gebruik"
 
-#: inc/class.isset-video-publisher-meta-box.php:49
-msgid "Use as video on homepage."
-msgstr ""
+#: views/admin/dashboard/api-dashboard.php:14
+#: views/admin/dashboard/dashboard.php:10
+msgid "Data streamed"
+msgstr "Data gestreamed"
 
-#: inc/class.isset-video-publisher.php:313
+#: views/admin/dashboard/api-dashboard.php:23
+msgid "Logged in as"
+msgstr "Ingelogd als"
+
+#: views/admin/dashboard/api-dashboard.php:25
+#: views/admin/dashboard/dashboard.php:14
+#: views/admin/page.php:6
+msgid "Logout"
+msgstr "Uitloggen"
+
+#: views/admin/dashboard/api-dashboard.php:31
+msgid "Subscription type"
+msgstr "Abonnement type"
+
+#: views/admin/dashboard/api-dashboard.php:48
+msgid "Views"
+msgstr "Views"
+
+#: views/admin/dashboard/api-dashboard.php:49
+msgid "Data"
+msgstr "Data"
+
+#: views/admin/dashboard/api-dashboard.php:70
+#: views/admin/dashboard/dashboard.php:18
+msgid "Login to isset.video"
+msgstr "Inloggen op isset.video"
+
+#: views/admin/dashboard/dashboard.php:3
+msgid "Logged in as %s"
+msgstr "Ingelogd als %s"
+
+#: views/admin/dashboard/dashboard.php:15
+#: views/admin/page.php:7
+#: views/admin/upload.php:42
+msgid "Go to videos"
+msgstr "Naar video's"
+
+#: views/admin/input.php:6
+msgid "Unsupported type"
+msgstr "Type niet ondersteund"
+
+#: views/admin/overview.php:7
+msgid "Your Videos"
+msgstr "Uw Video's"
+
+#: views/admin/page.php:4
+msgid "Hi, %s"
+msgstr "Hallo %s"
+
+#: views/admin/page.php:5
+msgid "You are now connected to my.isset.video. Click the button below to unlink your account and logout."
+msgstr "U bent nu verbonden met my.isset.video. Klik op de knop hieronder om uw account te ontkoppelen en uit te loggen."
+
+#: views/admin/page.php:11
+#: views/admin/page.php:13
+msgid "Connect to my.isset.video"
+msgstr "Verbinden met my.isset.video"
+
+#: views/admin/page.php:12
+msgid "Please connect your my.isset.video account by clicking the button below. We will redirect you to my.isset.video to ask for your permission."
+msgstr "Verbind met uw my.isset.video account door op de knop hieronder te klikken. U wordt doorverwezen naar my.isset.video om hiervoor toestemming te vragen."
+
+#: views/admin/upload.php:6
+#, fuzzy
+msgid "Upload new video"
+msgstr "Nieuwe video"
+
+#: views/admin/upload.php:19
+msgid "Drop one or more files here (4.3GB max) or browse your computer."
+msgstr "Sleep hier een of meerdere videobestanden op (4,3GB max) of blader op uw computer. "
+
+#: views/admin/upload.php:22
+msgid "Upload"
+msgstr "Upload"
+
+#: views/admin/upload.php:26
+msgid "Cancel upload"
+msgstr "Annuleer upload"
+
+#: views/admin/upload.php:35
+msgid "Storage limit is already reached, please remove video's to upload again or upgrade your subscription"
+msgstr "Opslaglimiet is reeds vereikt, verwijder video's om nieuwe video's te kunne uploaden of upgrade uw abonnement."
+
+#: views/shortcode/publish-invalid.php:3
+#, fuzzy
+msgid "Video is not available"
+msgstr "Deze video kan niet geladen worden"
+
+#: views/shortcode/publish.php:7
 msgid "Your browser does not support the video tag."
 msgstr "Jouw browser ondersteund geen videos"
 
-#: inc/class.isset-video-publisher.php:315
-msgid "Video canot be loaded"
+#: views/shortcode/publish.php:12
+#, fuzzy
+msgid "Video cannot be loaded"
 msgstr "Deze video kan niet geladen worden"
 
-#: inc/class.isset-video-publisher.php:334
-msgid "Add New Video"
-msgstr "Nieuwe video"
+#~ msgid "Publisher preview"
+#~ msgstr "Preview"
 
-#: inc/class.isset-video-publisher.php:335
-msgid "Import from publisher"
-msgstr "Importeer"
+#~ msgid "Use this shortcode in a post to include the video."
+#~ msgstr ""
+"\n"
+"kan deze shortcode in een bericht gebruiken om de video te tonen.\""
 
-#: inc/class.isset-video-publisher.php:336
-msgid "Edit Video"
-msgstr "Bewerk"
+#~ msgid "Import from publisher"
+#~ msgstr "Importeer"
 
-#: inc/class.isset-video-publisher.php:337
-msgid "View Video"
-msgstr "Bekijk"
+#~ msgid "Edit Video"
+#~ msgstr "Bewerk"
 
-#: inc/class.isset-video-publisher.php:338
-msgid "All Videos"
-msgstr "Alle videos"
+#~ msgid "Parent Videos:"
+#~ msgstr "Hoort hij:"
 
-#: inc/class.isset-video-publisher.php:339
-msgid "Search Videos"
-msgstr "Zoeken"
+#~ msgid "No videos found in Trash."
+#~ msgstr "Geen videos gevonden tussen deze rommel"
 
-#: inc/class.isset-video-publisher.php:340
-msgid "Parent Videos:"
-msgstr "Hoort hij:"
-
-#: inc/class.isset-video-publisher.php:341
-msgid "No videos found."
-msgstr "Geen videos gevonden"
-
-#: inc/class.isset-video-publisher.php:342
-msgid "No videos found in Trash."
-msgstr "Geen videos gevonden tussen deze rommel"
-
-#: inc/class.isset-video-publisher.php:347
-msgid "Description."
-msgstr "Omschrijving"
-
-#. Plugin Name of the plugin/theme
 #, fuzzy
-msgid "Isset Video Publisher plugin"
-msgstr "Video publisher instellingen"
+#~ msgid "Isset Video Publisher plugin"
+#~ msgstr "Video publisher instellingen"
 
-#. Plugin URI of the plugin/theme
-msgid "http://isset.nl"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid ""
-"Video integration from the video publisher from isset.video"
-msgstr ""
-"Video integratie, gemaakt voor de video publisher gemaakt door Isset "
-"Internet Professionals"
-
-#. Author of the plugin/theme
-msgid "isset.video"
-msgstr ""
-
-#: inc/class.isset-video-publisher.php:329
-msgctxt "post type general name"
-msgid "Videos"
-msgstr ""
-
-#: inc/class.isset-video-publisher.php:330
-msgctxt "post type singular name"
-msgid "Video"
-msgstr ""
-
-#: inc/class.isset-video-publisher.php:331
-msgctxt "admin menu"
-msgid "Videos"
-msgstr ""
-
-#: inc/class.isset-video-publisher.php:332
-msgctxt "add new on admin bar"
-msgid "Video"
-msgstr ""
-
-#: inc/class.isset-video-publisher.php:333
-msgctxt "video"
-msgid "Import from publisher"
-msgstr ""
+#~ msgid "Video integration from the video publisher from isset.video"
+#~ msgstr ""
+"\n"
+"integratie, gemaakt voor de video publisher gemaakt door Isset \"\n"
+"Professionals\""
