--- a/plugin/languages/isset-video-publisher-nl_NL.po
+++ b/plugin/languages/isset-video-publisher-nl_NL.po
@@ -2,15 +2,159 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
+"POT-Creation-Date: 2020-11-09T14:18:31+00:00\n"
+"PO-Revision-Date: 2020-11-09 15:19+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-11-03T11:55:05+00:00\n"
-"PO-Revision-Date: 2020-11-03 13:02+0100\n"
-"Language: nl_NL\n"
 "X-Generator: Poedit 2.4.1\n"
+
+#: js/overview/components/admin-copy-text.js:42
+msgid "Copied shortcode"
+msgstr "Shortcode gekopieerd"
+
+#: js/overview/components/admin-video-details.js:122
+msgid "Use the following code to embed this video"
+msgstr "Gebruik de volgende code om de video toe te voegen"
+
+#: js/overview/components/admin-video-details.js:135
+#: js/overview/components/admin-video-overview.js:168
+msgid "Filename"
+msgstr "Bestandsnaam"
+
+#: js/overview/components/admin-video-details.js:139
+#: js/overview/components/admin-video-overview.js:169
+msgid "Created"
+msgstr "Aangemaakt"
+
+#: js/overview/components/admin-video-details.js:143
+msgid "Filesize"
+msgstr "Grootte"
+
+#: js/overview/components/admin-video-details.js:147
+msgid "Length"
+msgstr "Speelduur"
+
+#: js/overview/components/admin-video-details.js:151
+msgid "Resolution"
+msgstr "Resolutie"
+
+#: js/overview/components/admin-video-details.js:155
+msgid "Presets"
+msgstr "Preset"
+
+#: js/overview/components/admin-video-overview.js:102
+msgid "Are you sure you want to delete the selected videos?"
+msgstr "Weet u zeker dat u de geselecteerde video's wilt verwijderen?"
+
+#: js/overview/components/admin-video-overview.js:143
+msgid "Upload New"
+msgstr "Upload Nieuw"
+
+#: js/overview/components/admin-video-overview.js:146
+msgid "Delete Selected"
+msgstr "Verwijder Geselecteerde"
+
+#: js/overview/components/admin-video-overview.js:149
+#: js/publisher-video-block.js:236
+msgid "Search"
+msgstr "Zoeken"
+
+#: js/overview/components/admin-video-overview.js:155
+msgid "Total results"
+msgstr "Totaal aantal resultaten"
+
+#: js/overview/components/admin-video-overview.js:165
+msgid "Thumbnail"
+msgstr "Voorbeeld"
+
+#: js/overview/components/admin-video-overview.js:166
+msgid "Duration"
+msgstr "Speelduur"
+
+#: js/overview/components/admin-video-overview.js:167
+msgid "Size"
+msgstr "Grootte"
+
+#: js/overview/components/admin-video-overview.js:192
+#: js/publisher-video-block.js:240
+msgid "No publishes found"
+msgstr "Geen videos gevonden"
+
+#: js/overview/components/video-item.js:47 js/publisher-video-block.js:151
+msgid "Processing"
+msgstr "Bezig"
+
+#: js/admin-video-upload.js:132
+msgid "Successfully added %s to archive"
+msgstr "%s succesvol toegevoegd aan archief"
+
+#: js/admin-video-upload.js:136
+msgid "Failed adding %s to archive"
+msgstr "Fout tijdens het toevoegen van %s aan archief"
+
+#: js/admin-video-upload.js:24
+msgid "Selected files"
+msgstr "Geselecteerd bestand"
+
+#: js/admin-video-upload.js:44
+msgid "Are you sure you want to leave?"
+msgstr "Weet u zeker dat u de pagina wilt verlaten?"
+
+#: js/admin-video-upload.js:64
+msgid "Uploading"
+msgstr "Uploaden"
+
+#: js/admin-video-upload.js:79
+msgid "Uploaded"
+msgstr "Upgeload"
+
+#: js/admin-video-upload.js:80
+msgid "Your files will be queued for transcoding"
+msgstr "Uw bestanden worden in de wachtrij gezet om te worden verwerkt"
+
+#: js/publisher-video-block.js:158
+msgid "Error"
+msgstr "Fout"
+
+#: js/publisher-video-block.js:173
+msgid "File nof found"
+msgstr "Video niet gevonden"
+
+#: js/publisher-video-block.js:196
+msgid "Video info"
+msgstr "Video info"
+
+#: js/publisher-video-block.js:198
+msgid "Video name"
+msgstr "Video naam"
+
+#: js/publisher-video-block.js:201
+msgid "Video size"
+msgstr "Video grootte"
+
+#: js/publisher-video-block.js:207
+msgid "Options"
+msgstr "Opties"
+
+#: js/publisher-video-block.js:209
+msgid "Autoplay"
+msgstr "Automatisch afspelen"
+
+#: js/publisher-video-block.js:231
+msgid "Videos on isset.video"
+msgstr "Video's op isset.video"
+
+#: js/publisher-video-block.js:234
+msgid "Search videos"
+msgstr "Zoeken"
+
+#: js/publisher-video-block.js:244
+msgid "More results"
+msgstr "Meer resultaten"
 
 #. Plugin Name of the plugin
 #. Author of the plugin
@@ -22,22 +166,19 @@ msgid "https://isset.video/wp-plugin/"
 msgstr ""
 
 #. Description of the plugin
-#, fuzzy
 msgid "Wordpress isset.video implementation"
-msgstr "Video publisher instellingen"
+msgstr "Wordpress isset.video implementatie"
 
 #. Author URI of the plugin
 msgid "http://isset.nl/"
 msgstr ""
 
-#: src/Action/Settings/Init.php:52
-#: src/Action/Settings/Menu.php:17
+#: src/Action/Settings/Init.php:52 src/Action/Settings/Menu.php:17
 #: src/Action/Settings/Menu.php:18
 msgid "isset.video settings"
 msgstr "isset.video instellingen"
 
-#: src/Action/Settings/Init.php:54
-#: src/Action/Settings/Init.php:77
+#: src/Action/Settings/Init.php:54 src/Action/Settings/Init.php:77
 msgid "Enter your settings below:"
 msgstr "Voer hieronder je instellingen van de publisher in"
 
@@ -64,8 +205,7 @@ msgid "Logged in as"
 msgstr "Ingelogd als"
 
 #: views/admin/dashboard/api-dashboard.php:25
-#: views/admin/dashboard/dashboard.php:14
-#: views/admin/page.php:6
+#: views/admin/dashboard/dashboard.php:14 views/admin/page.php:6
 msgid "Logout"
 msgstr "Uitloggen"
 
@@ -90,8 +230,7 @@ msgstr "Inloggen op isset.video"
 msgid "Logged in as %s"
 msgstr "Ingelogd als %s"
 
-#: views/admin/dashboard/dashboard.php:15
-#: views/admin/page.php:7
+#: views/admin/dashboard/dashboard.php:15 views/admin/page.php:7
 #: views/admin/upload.php:42
 msgid "Go to videos"
 msgstr "Naar video's"
@@ -109,26 +248,34 @@ msgid "Hi, %s"
 msgstr "Hallo %s"
 
 #: views/admin/page.php:5
-msgid "You are now connected to my.isset.video. Click the button below to unlink your account and logout."
-msgstr "U bent nu verbonden met my.isset.video. Klik op de knop hieronder om uw account te ontkoppelen en uit te loggen."
+msgid ""
+"You are now connected to my.isset.video. Click the button below to unlink "
+"your account and logout."
+msgstr ""
+"U bent nu verbonden met my.isset.video. Klik op de knop hieronder om uw "
+"account te ontkoppelen en uit te loggen."
 
-#: views/admin/page.php:11
-#: views/admin/page.php:13
+#: views/admin/page.php:11 views/admin/page.php:13
 msgid "Connect to my.isset.video"
 msgstr "Verbinden met my.isset.video"
 
 #: views/admin/page.php:12
-msgid "Please connect your my.isset.video account by clicking the button below. We will redirect you to my.isset.video to ask for your permission."
-msgstr "Verbind met uw my.isset.video account door op de knop hieronder te klikken. U wordt doorverwezen naar my.isset.video om hiervoor toestemming te vragen."
+msgid ""
+"Please connect your my.isset.video account by clicking the button below. We "
+"will redirect you to my.isset.video to ask for your permission."
+msgstr ""
+"Verbind met uw my.isset.video account door op de knop hieronder te klikken. "
+"U wordt doorverwezen naar my.isset.video om hiervoor toestemming te vragen."
 
 #: views/admin/upload.php:6
-#, fuzzy
 msgid "Upload new video"
 msgstr "Nieuwe video"
 
 #: views/admin/upload.php:19
 msgid "Drop one or more files here (4.3GB max) or browse your computer."
-msgstr "Sleep hier een of meerdere videobestanden op (4,3GB max) of blader op uw computer. "
+msgstr ""
+"Sleep hier een of meerdere videobestanden op (4,3GB max) of blader op uw "
+"computer. "
 
 #: views/admin/upload.php:22
 msgid "Upload"
@@ -139,11 +286,14 @@ msgid "Cancel upload"
 msgstr "Annuleer upload"
 
 #: views/admin/upload.php:35
-msgid "Storage limit is already reached, please remove video's to upload again or upgrade your subscription"
-msgstr "Opslaglimiet is reeds vereikt, verwijder video's om nieuwe video's te kunne uploaden of upgrade uw abonnement."
+msgid ""
+"Storage limit is already reached, please remove video's to upload again or "
+"upgrade your subscription"
+msgstr ""
+"Opslaglimiet is reeds vereikt, verwijder video's om nieuwe video's te kunne "
+"uploaden of upgrade uw abonnement."
 
 #: views/shortcode/publish-invalid.php:3
-#, fuzzy
 msgid "Video is not available"
 msgstr "Deze video kan niet geladen worden"
 
@@ -152,7 +302,6 @@ msgid "Your browser does not support the video tag."
 msgstr "Jouw browser ondersteund geen videos"
 
 #: views/shortcode/publish.php:12
-#, fuzzy
 msgid "Video cannot be loaded"
 msgstr "Deze video kan niet geladen worden"
 
@@ -161,8 +310,7 @@ msgstr "Deze video kan niet geladen worden"
 
 #~ msgid "Use this shortcode in a post to include the video."
 #~ msgstr ""
-"\n"
-"kan deze shortcode in een bericht gebruiken om de video te tonen.\""
+#~ "Je kan deze shortcode in een bericht gebruiken om de video te tonen."
 
 #~ msgid "Import from publisher"
 #~ msgstr "Importeer"
@@ -182,6 +330,5 @@ msgstr "Deze video kan niet geladen worden"
 
 #~ msgid "Video integration from the video publisher from isset.video"
 #~ msgstr ""
-"\n"
-"integratie, gemaakt voor de video publisher gemaakt door Isset \"\n"
-"Professionals\""
+#~ "Video integratie, gemaakt voor de video publisher gemaakt door Isset "
+#~ "Internet Professionals"
