--- a/plugin/languages/isset-video-en.po
+++ b/plugin/languages/isset-video-en.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"POT-Creation-Date: 2020-12-07T13:01:40+00:00\n"
-"PO-Revision-Date: 2020-12-07 14:08+0100\n"
+"POT-Creation-Date: 2020-12-10T15:37:41+00:00\n"
+"PO-Revision-Date: 2020-12-10 16:43+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -11,6 +11,76 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.4.1\n"
+
+#: js/livestream/components/livestream.js:56 src/Plugin.php:356
+#: src/Plugin.php:357
+msgid "Livestream"
+msgstr "Livestream"
+
+#: js/livestream/components/livestreamDetails.js:101
+msgid "Livestream is waiting for input at: %s"
+msgstr "Livestream is waiting for input at: %s"
+
+#: js/livestream/components/livestreamDetails.js:108
+msgid "Livestream has ended"
+msgstr "Livestream has ended"
+
+#: js/livestream/components/livestreamDetails.js:117
+msgid "Stream Url"
+msgstr "Stream Url"
+
+#: js/livestream/components/livestreamDetails.js:121
+msgid "Stream Key"
+msgstr "Stream Key"
+
+#: js/livestream/components/livestreamDetails.js:125
+#: js/overview/components/admin-video-details.js:144
+#: js/overview/components/admin-video-overview.js:178
+msgid "Created"
+msgstr "Created"
+
+#: js/livestream/components/livestreamDetails.js:129
+msgid "Started"
+msgstr "Started"
+
+#: js/livestream/components/livestreamDetails.js:133
+msgid "Ended"
+msgstr "Ended"
+
+#: js/livestream/components/livestreamDetails.js:137
+msgid "Share Url"
+msgstr "Share Url"
+
+#: js/livestream/components/livestreamDetails.js:147
+msgid "Name"
+msgstr "Name"
+
+#: js/livestream/components/livestreamDetails.js:149
+msgid "Description"
+msgstr "Description"
+
+#: js/livestream/components/livestreamDetails.js:155
+msgid "Start streaming"
+msgstr "Start streaming"
+
+#: js/livestream/components/livestreamDetails.js:157
+msgid "Streaming info"
+msgstr ""
+"Using isset.video, you can easily start streaming. All you need is a piece "
+"of software, able to stream to rtmp urls. We suggest using OBS."
+
+#: js/livestream/components/livestreamDetails.js:92
+msgid "No livestream created yet"
+msgstr "No livestream created yet"
+
+#: js/livestream/components/livestreamDetails.js:94
+#: js/publisher-livestream-block.js:99
+msgid "Create Livestream"
+msgstr "Create Livestream"
+
+#: js/livestream/components/livestreamDetails.js:99
+msgid "Livestream has not yet started"
+msgstr "Livestream has not yet started"
 
 #: js/overview/components/admin-copy-text.js:42
 msgid "Copied shortcode"
@@ -24,11 +94,6 @@ msgstr "Use the following code to embed this video"
 #: js/overview/components/admin-video-overview.js:177
 msgid "Filename"
 msgstr "Filename"
-
-#: js/overview/components/admin-video-details.js:144
-#: js/overview/components/admin-video-overview.js:178
-msgid "Created"
-msgstr "Created"
 
 #: js/overview/components/admin-video-details.js:148
 msgid "Filesize"
@@ -143,6 +208,14 @@ msgstr "Upload new video"
 msgid "Upload More"
 msgstr "Upload More"
 
+#: js/publisher-livestream-block.js:106
+msgid "Getting livestream data"
+msgstr "Getting livestream data"
+
+#: js/publisher-livestream-block.js:129
+msgid "No livestream found"
+msgstr "No livestream found"
+
 #: js/publisher-video-block.js:158
 msgid "Error"
 msgstr "Error"
@@ -200,7 +273,7 @@ msgstr "Wordpress isset.video implementation"
 msgid "http://isset.nl/"
 msgstr "http://isset.nl/"
 
-#: src/Plugin.php:321
+#: src/Plugin.php:326
 msgid "Videos"
 msgstr "Videos"
 
@@ -279,6 +352,10 @@ msgid ""
 msgstr ""
 "Please connect your my.isset.video account by clicking the button below. We "
 "will redirect you to my.isset.video to ask for your permission."
+
+#: views/shortcode/livestream-invalid.php:3
+msgid "Livestream is not available"
+msgstr "Livestream is not available"
 
 #: views/shortcode/publish-invalid.php:3
 msgid "Video is not available"
