--- a/plugin/languages/isset-video-nl_NL.po
+++ b/plugin/languages/isset-video-nl_NL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"POT-Creation-Date: 2020-12-07T13:01:40+00:00\n"
-"PO-Revision-Date: 2020-12-07 14:07+0100\n"
+"POT-Creation-Date: 2020-12-10T15:37:41+00:00\n"
+"PO-Revision-Date: 2020-12-10 16:40+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nl_NL\n"
@@ -11,6 +11,76 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.4.1\n"
+
+#: js/livestream/components/livestream.js:56 src/Plugin.php:356
+#: src/Plugin.php:357
+msgid "Livestream"
+msgstr "Livestream"
+
+#: js/livestream/components/livestreamDetails.js:101
+msgid "Livestream is waiting for input at: %s"
+msgstr "Livestream wacht op input op: %s"
+
+#: js/livestream/components/livestreamDetails.js:108
+msgid "Livestream has ended"
+msgstr "Livestream is beëindigd"
+
+#: js/livestream/components/livestreamDetails.js:117
+msgid "Stream Url"
+msgstr "Stream Url"
+
+#: js/livestream/components/livestreamDetails.js:121
+msgid "Stream Key"
+msgstr "Stream Sleutel"
+
+#: js/livestream/components/livestreamDetails.js:125
+#: js/overview/components/admin-video-details.js:144
+#: js/overview/components/admin-video-overview.js:178
+msgid "Created"
+msgstr "Aangemaakt"
+
+#: js/livestream/components/livestreamDetails.js:129
+msgid "Started"
+msgstr "Gestart"
+
+#: js/livestream/components/livestreamDetails.js:133
+msgid "Ended"
+msgstr "Beëindigd"
+
+#: js/livestream/components/livestreamDetails.js:137
+msgid "Share Url"
+msgstr "Share Url"
+
+#: js/livestream/components/livestreamDetails.js:147
+msgid "Name"
+msgstr "Naam"
+
+#: js/livestream/components/livestreamDetails.js:149
+msgid "Description"
+msgstr "Beschrijving"
+
+#: js/livestream/components/livestreamDetails.js:155
+msgid "Start streaming"
+msgstr "Begin met Streamen"
+
+#: js/livestream/components/livestreamDetails.js:157
+msgid "Streaming info"
+msgstr ""
+"Met isset.video kun je eenvoudig beginnen met livestreamen. Je hebt alleen "
+"software nodig die naar rtmp urls kan streamen. We raden zelf OBS aan."
+
+#: js/livestream/components/livestreamDetails.js:92
+msgid "No livestream created yet"
+msgstr "Nog geen livestream aangemaakt"
+
+#: js/livestream/components/livestreamDetails.js:94
+#: js/publisher-livestream-block.js:99
+msgid "Create Livestream"
+msgstr "Livestream Aanmaken"
+
+#: js/livestream/components/livestreamDetails.js:99
+msgid "Livestream has not yet started"
+msgstr "Livestream is nog niet gestart"
 
 #: js/overview/components/admin-copy-text.js:42
 msgid "Copied shortcode"
@@ -24,11 +94,6 @@ msgstr "Gebruik de volgende code om de video toe te voegen"
 #: js/overview/components/admin-video-overview.js:177
 msgid "Filename"
 msgstr "Bestandsnaam"
-
-#: js/overview/components/admin-video-details.js:144
-#: js/overview/components/admin-video-overview.js:178
-msgid "Created"
-msgstr "Aangemaakt"
 
 #: js/overview/components/admin-video-details.js:148
 msgid "Filesize"
@@ -145,6 +210,14 @@ msgstr "Nieuwe video"
 msgid "Upload More"
 msgstr "Meer Uploaden"
 
+#: js/publisher-livestream-block.js:106
+msgid "Getting livestream data"
+msgstr "Livestream data ophalen"
+
+#: js/publisher-livestream-block.js:129
+msgid "No livestream found"
+msgstr "Geen livestream gevonden"
+
 #: js/publisher-video-block.js:158
 msgid "Error"
 msgstr "Fout"
@@ -202,7 +275,7 @@ msgstr "Wordpress isset.video implementatie"
 msgid "http://isset.nl/"
 msgstr "http://isset.nl/"
 
-#: src/Plugin.php:321
+#: src/Plugin.php:326
 msgid "Videos"
 msgstr "Video's"
 
@@ -282,13 +355,17 @@ msgstr ""
 "Verbind met uw my.isset.video account door op de knop hieronder te klikken. "
 "U wordt doorverwezen naar my.isset.video om hiervoor toestemming te vragen."
 
+#: views/shortcode/livestream-invalid.php:3
+msgid "Livestream is not available"
+msgstr "Deze livestream kan niet geladen worden"
+
 #: views/shortcode/publish-invalid.php:3
 msgid "Video is not available"
 msgstr "Deze video kan niet geladen worden"
 
 #: views/shortcode/publish.php:7
 msgid "Your browser does not support the video tag."
-msgstr "Jouw browser ondersteund geen videos"
+msgstr "Jouw browser ondersteunt geen video's"
 
 #: views/shortcode/publish.php:12
 msgid "Video cannot be loaded"
