--- a/plugin/languages/isset-video-nl_NL.po
+++ b/plugin/languages/isset-video-nl_NL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2021-08-18 16:24+0200\n"
+"POT-Creation-Date: 2021-08-23T11:58:53+00:00\n"
+"PO-Revision-Date: 2021-08-23 14:27+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nl_NL\n"
@@ -102,7 +102,29 @@ msgstr ""
 "Met isset.video kun je eenvoudig beginnen met livestreamen. Je hebt alleen "
 "software nodig die naar rtmp urls kan streamen. We raden zelf OBS aan."
 
+#: js/livestream/components/livestreamDetails.js:196
+msgid "Rtmp info header"
+msgstr "Stream Url"
+
+#: js/livestream/components/livestreamDetails.js:199
+msgid "Rtmp info text"
+msgstr ""
+"De RTMP url die u van ons krijgt, kunt u gebruiken wanneer uw streaming "
+"software om een streaming server of endpoint vraagt. Soms verwacht de "
+"software dat de url en de stream sleutel los worden ingevuld. In OBS kunt u "
+"deze instellingen vinden onder Settings -> Stream."
+
 #: js/livestream/components/livestreamDetails.js:202
+msgid "Streamkey info header"
+msgstr "Stream Key"
+
+#: js/livestream/components/livestreamDetails.js:205
+msgid "Streamkey info text"
+msgstr ""
+"Wanneer de software een aparte stream key verwacht, gebruik dan de gegeven "
+"sleutel."
+
+#: js/livestream/components/livestreamDetails.js:214
 msgid "Cancel Livestream"
 msgstr "Livestream Annuleren"
 
@@ -110,7 +132,9 @@ msgstr "Livestream Annuleren"
 msgid ""
 "Are you sure you want to cancel the current livestream? No VOD will be "
 "created"
-msgstr "Weet u zeker dat u de"
+msgstr ""
+"Weet u zeker dat u de huidige livestream wilt beëindigen? Er wordt dan geen "
+"VOD aangemaakt"
 
 #: js/livestream/components/livestreamPlayer.js:109
 msgid "Livestream ended"
